change log changes

--- a/app/views/layinghens/current/eligibility/aviary/features.html
+++ b/app/views/layinghens/current/eligibility/aviary/features.html
@@ -34,7 +34,7 @@
                             value: 'Yes',
                             checked: true if data['aviary-manure'] == 'Yes',
                             attributes: {
-                                    'data-next': 'lighting'
+                                    'data-next': '../ventilation/features'
                                 }
                         },
                         {
@@ -42,7 +42,7 @@
                             value: 'No',
                             checked: true if data['aviary-manure'] == 'No',
                             attributes: {
-                                    'data-next': 'elim-manure'
+                                    'data-next': 'elim-features'
                                 }
                         }
                     ]
