--- a/app/views/layinghens/current/eligibility/building/items.html
+++ b/app/views/layinghens/current/eligibility/building/items.html
@@ -31,7 +31,7 @@
                             water-tight roof and walls
                         </li>
                         <li>
-                            capped roof and wall inlets and outlets
+                            mesh capping applied to any roof or wall inlets and outlets capped with mesh (with a mesh hole size of 25 millimetres or less)
                         </li>
                         <li>
                             catch trays under all chimneys and roof-mounted vents
@@ -60,7 +60,7 @@
                             value: 'Yes',
                             checked: true if data['items'] == 'Yes',
                             attributes: {
-                                    'data-next': 'biosecurity'
+                                    'data-next': 'insulation'
                                 }
                         },
                         {
@@ -79,6 +79,19 @@
                 }) }}
 
             </form>
+
+        </div>
+
+         <div class="govuk-grid-column-one-third">
+
+            <div class="app-step-nav-related app-step-nav-related--singular">
+                <h2 class="app-step-nav-related__heading">
+                <span class="app-step-nav-related__pretitle">Eligibility</span>
+                </h2>
+                <p>
+                    The grant-funded building must have these design features to meet the grant priority of improving biosecurity.
+                </p>
+            </div>
 
         </div>
 
