--- a/app/views/layinghens/current/eligibility/lighting/elim-features.html
+++ b/app/views/layinghens/current/eligibility/lighting/elim-features.html
@@ -18,15 +18,21 @@
                     The housing's lighting system must have: 
                 </p>
 
-                <ul class="govuk-list govuk-list--bullet">
+              <ul class="govuk-list govuk-list--bullet">
                     <li>
-                        the ability to provide an automatic stepped dawn and dusk lighting environment (unless this is already provided as part of an aviary lighting system)
+                        non-flicker LED light with a colour temperature between 2700 and 4000 Kelvin   
                     </li>
                     <li>
-                        an option for red light
+                        capacity for zonal dimming between 0 and 60 lux  
                     </li>
                     <li>
-                        a fail-safe standby device in case of electrical or other failure
+                        coverage of the entire floor-litter (scratch) area  
+                    </li>
+                    <li>
+                        a simulated stepped dawn and dusk (unless this is already provided as part of an aviary lighting system)  
+                    </li>
+                    <li>
+                        an option for red light 
                     </li>
                 </ul>
 
