--- a/app/views/layinghens/current/eligibility/building/elim-items.html
+++ b/app/views/layinghens/current/eligibility/building/elim-items.html
@@ -26,7 +26,7 @@
                         water-tight roof and walls
                     </li>
                     <li>
-                        capped roof and wall inlets and outlets
+                        mesh capping applied to any roof or wall inlets and outlets capped with mesh (with a mesh hole size of 25 millimetres or less)
                     </li>
                     <li>
                         catch trays under all chimneys and roof-mounted vents
