--- a/app/views/layinghens/current/eligibility/common/elim-farmer-type.html
+++ b/app/views/layinghens/current/eligibility/common/elim-farmer-type.html
@@ -1,7 +1,7 @@
 {% extends 'layinghens/current/views/layouts/layout.html' %}
 
 {% block pageTitle %}
-    You cannot apply for a grant from this scheme - Concrete apron
+    You cannot apply for a grant from this scheme - Farmer type
 {% endblock %}
 
 {% block content %}
