--- a/app/views/layinghens/current/eligibility/common/elim-project-type.html
+++ b/app/views/layinghens/current/eligibility/common/elim-project-type.html
@@ -1,7 +1,7 @@
 {% extends 'layinghens/current/views/layouts/layout.html' %}
 
 {% block pageTitle %}
-    You cannot apply for a grant from this scheme - Country 
+    You cannot apply for a grant from this scheme - project type
 {% endblock %}
 
 {% block content %}
@@ -15,12 +15,19 @@
                 <h1 class="govuk-heading-l">You cannot apply for a grant from this scheme</h1>
 
                 <p>
-                    This grant is only for projects in England.
+                    This grant is for:
                 </p>
-
-                {{ govukInsetText ({
-                    text: 'Scotland, Wales and Northern Ireland have other grants available.'
-                }) }}
+                    <ul class="govuk-list govuk-list--bullet">
+                        <li>
+                            refurbishing an existing laying hen or pullet building
+                        </li>
+                        <li>
+                            replacing an existing laying hen or pullet building with a new building
+                        </li>
+                        <li>
+                            adding a veranda to an existing laying hen or pullet building
+                        </li>
+                    </ul>
 
                 <p>
                     <a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments">
