--- a/app/views/layinghens/current/eligibility/common/project-type.html
+++ b/app/views/layinghens/current/eligibility/common/project-type.html
@@ -15,11 +15,11 @@
                 {% set hintHtml %}
 
                     <p class="govuk-hint">
-                        If you want to apply for grant funding for multiple hen or pullet housing projects, you must submit an application for each project.
+                        You must submit an application for each house or veranda project. 
                     </p>
 
                     <p class="govuk-hint">
-                        If you want to apply for multiple veranda projects you must submit an application for each project.
+                        The maximum total grant amount each business can apply for is £500,000 for housing projects, or £100,000 for veranda projects.
                     </p>
 
                 {% endset %}
@@ -44,15 +44,7 @@
                     },
                     items: [
                         {
-                            text: 'Replacing existing housing',
-                            value: 'replace',
-                            checked: true if data['project-type'] == 'replace',
-                            attributes: {
-                                'data-next': 'farmer-type'
-                            }
-                        },
-                        {
-                            text: 'Refurbishing existing housing',
+                            text: 'Refurbishing an existing laying hen or pullet building',
                             value: 'refurb',
                             checked: true if data['project-type'] == 'refurb',
                             attributes: {
@@ -60,11 +52,19 @@
                             }
                         },
                         {
-                            text: 'Adding a veranda only to existing housing',
+                            text: 'Replacing an existing laying hen or pullet building with a new building',
+                            value: 'replace',
+                            checked: true if data['project-type'] == 'replace',
+                            attributes: {
+                                'data-next': 'farmer-type'
+                            }
+                        },
+                        {
+                            text: 'Adding a veranda only to an existing laying hen or pullet building ',
                             value: 'veranda',
                             checked: true if data['project-type'] == 'veranda',
                             hint: {
-                                text: 'The RPA will award the grant funding for adding a veranda only to existing housing on a first-come first-served basis'
+                                text: 'The RPA will award veranda grant funding on a first-come first-served basis'
                             },
                             attributes: {
                                 'data-next': nextPageForVeranda
@@ -101,6 +101,22 @@
                 <p>
                     You can apply for grant funding for either housing projects or veranda projects.
                 </p>
+
+                <p>
+                    This grant is for:
+                </p>
+                <ul class="govuk-list govuk-list--bullet">
+                    <li>
+                        refurbishing an existing laying hen or pullet building
+                    </li>
+                    <li>
+                        replacing an existing laying hen or pullet building with a new building
+                    </li>
+                    <li>
+                        adding a veranda to an existing laying hen or pullet building
+                    </li>
+                </ul>
+
             </div>
 
         </div>
