--- a/app/views/layinghens/current/eligibility/features/elim-one-thousand-birds.html
+++ b/app/views/layinghens/current/eligibility/features/elim-one-thousand-birds.html
@@ -1,7 +1,7 @@
 {% extends 'layinghens/current/views/layouts/layout.html' %}
 
 {% block pageTitle %}
-    You cannot apply for a grant from this scheme - Country 
+    You cannot apply for a grant from this scheme - One thousand birds
 {% endblock %}
 
 {% block content %}
@@ -15,12 +15,8 @@
                 <h1 class="govuk-heading-l">You cannot apply for a grant from this scheme</h1>
 
                 <p>
-                    This grant is only for projects in England.
+                    You must have at least 1,000 birds on your farm currently.
                 </p>
-
-                {{ govukInsetText ({
-                    text: 'Scotland, Wales and Northern Ireland have other grants available.'
-                }) }}
 
                 <p>
                     <a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments">
